public/css/estilarComentarios.css
#commentsSection article {
  margin-bottom: 3rem;
  padding: 1rem;
  border-radius: 10px;
  box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.2);
  word-break: break-word; /* Asegura que las palabras largas se rompan si es necesario */
  overflow-wrap: break-word;
  backdrop-filter: blur(10px); /* Requiere soporte del navegador */
}

#commentsSection h3 {
  border-radius: 6px;
  padding: 0.2rem;
  min-width: fit-content;
}


#commentsSection p {
  font-style: italic;
  margin-left: 1rem;
  padding: 1rem;
}

#commentsSection span {
  font-weight: bold;
  font-size: 0.9rem;
  text-align: end;
}

#commentsSection div {
  display: flex;
  justify-content: space-between;
}

